feat(backend): implemented account management features
